fix docker image_pull update docs
