# api/src/routes.rs
@@ -1,7 +1,8 @@
 use actix_web::web;
 
 use crate::handlers::{
-    error, get::get_assignments, get::get_result, get::index, get::version, post::add_submission,
+    error, get::get_assignments, get::get_result, get::index, get::status, get::version,
+    post::add_submission,
 };
 
 pub fn register_routes(cfg: &mut web::ServiceConfig) {
@@ -9,6 +10,7 @@ pub fn register_routes(cfg: &mut web::ServiceConfig) {
         web::scope("/api")
             .route("", web::get().to(index)) // for testing only
             .route("/version", web::get().to(version))
+            .route("/status", web::get().to(status))
             .route("/assignments", web::get().to(get_assignments))
             .service(
                 web::resource("/submission")
